ThemeManageService: optimize theme applying progress
1. install overlay
2. apply wallpaper and lockscreen
3. apply sounds
4. enable overlay
5. disable old theme overlays

Signed-off-by: cjybyjk <cjybyjk@gmail.com>

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -49,4 +49,6 @@
     <string name="menu_refresh">刷新</string>
     <string name="menu_preferences">首选项</string>
     <string name="preferences_overlay_uninstall_flag">停用叠加层后将其卸载</string>
+    <string name="skin_apply_status_installing_overlay">正在安装叠加层</string>
+    <string name="skin_apply_status_cleaning">清理中</string>
 </resources>
