Theme: add support for bootanimation
Signed-off-by: cjybyjk <cjybyjk@gmail.com>

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -51,4 +51,7 @@
     <string name="preferences_overlay_uninstall_flag">停用叠加层后将其卸载</string>
     <string name="skin_apply_status_installing_overlay">正在安装叠加层</string>
     <string name="skin_apply_status_cleaning">清理中</string>
+    <string name="separator_others">其他</string>
+    <string name="others_bootanimation">开机动画</string>
+    <string name="skin_apply_status_bootanimation">正在应用开机动画</string>
 </resources>
