Theme: add support for fonts
Signed-off-by: cjybyjk <cjybyjk@gmail.com>

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -53,5 +53,7 @@
     <string name="skin_apply_status_cleaning">清理中</string>
     <string name="separator_others">其他</string>
     <string name="others_bootanimation">开机动画</string>
+    <string name="others_fonts">字体</string>
     <string name="skin_apply_status_bootanimation">正在应用开机动画</string>
+    <string name="skin_apply_status_fonts">正在应用字体</string>
 </resources>
